<resources>
    <string name="app_name">ComunicacionActivity</string>
    <string name="llamada_a_otra_activity">Llamada a otra activity</string>
    <string name="llamada_enviando_datos">Llamada a otra activity enviando datos</string>
    <string name="llamada_con_devolucion_de_datos">Llamada a otra activity con devolucion de datos</string>
    <string name="llamar">Llamar</string>
    <string name="texto_a_enviar">Texto a enviar</string>
    <string name="texto_devuelto">Texto devuelto</string>
    <string name="boton_cerrar">Cerrar</string>
    <string name="texto_activity_caso_1">Activity que devuelve el control a la principal</string>
</resources>