<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/llamada_a_otra_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/llamada_a_otra_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/llamar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openSomeActivity"
        android:text="@string/llamar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llamada_a_otra_activity" />

    <TextView
        android:id="@+id/llamada_enviando_datos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/llamada_enviando_datos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llamar1"/>

    <EditText
        android:id="@+id/texto_a_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:inputType="text"
        android:onClick="openSomeActivity"
        android:text="@string/texto_a_enviar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llamada_enviando_datos" />

    <Button
        android:id="@+id/llamar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="4dp"
        android:onClick="openSomeActivitySendingData"
        android:text="@string/llamar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_a_enviar"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/llamada_con_devolucion_de_datos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:text="@string/llamada_con_devolucion_de_datos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llamar2" />

    <EditText
        android:id="@+id/texto_devuelto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/texto_devuelto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llamada_con_devolucion_de_datos" />

    <Button
        android:id="@+id/llamar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="4dp"
        android:onClick="openSomeActivity"
        android:text="@string/llamar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texto_devuelto"
        tools:ignore="DuplicateIds" />

</androidx.constraintlayout.widget.ConstraintLayout>